core: New changes made with a2a protocol
